# FastLanes.

./: .clang-tidy  .gitmodules  CMakeLists.txt
.github/workflows/: CI.yaml
data/include/data/: fastlanes_data.hpp  generated.hpp
data/include/data/footer/: NextiaJD.hpp  clickbench.hpp  generated.hpp  issue.hpp  public_bi.hpp
example/: CMakeLists.txt  cpp_example.cpp
fls_bench/: fls_bench.hpp
fls_bench/fls_bench/: fls_bench.hpp
include/fls/common/: assert.hpp
include/fls/cor/prm/fsst/: fsst.h
include/fls/cor/prm/fsst12/: libfsst12.hpp
include/fls/encoder/: assert_eq.hpp
include/fls/io/: mmap.hpp
include/fls/utl/: util.hpp
log/: log.csv
primitives/fls_generated/fallback/scalar_aav_uf1/: fallback_scalar_aav_1024_uf1_rsum_bench.cpp  fallback_scalar_aav_1024_uf1_unffor_bench.cpp  ffor.cmake  pack.cmake  rsum.cmake  transpose.cmake  unffor.cmake  unpack.cmake  unrsum.cmake  untranspose.cmake
src/: connection.cpp
src/common/: assert.cpp
src/cor/eng/: engine.cpp  executor.cpp
src/cor/exp/: hdr.cpp
src/cor/lyt/: vec.cpp
src/io/: mmap.cpp
src/table/: rowgroup.cpp
test/src/: CMakeLists.txt  clickbench_test.cpp  issue_test.cpp  nextiajd_test.cpp  public_bi_test.cpp
